<resources>
    <string name="app_name">EcoTracker</string>
    <string name="log_in">Log In</string>
    <string name="e_mail">E-mail</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="privacy">Privacy</string>
    <string name="sign_in_now">Sign in now!</string>
    <string name="welcome_to_eco_tracker">Welcome to ECO Tracker</string>
    <string name="password">Password</string>
    <string name="type_your_e_mail">Type your E-mail</string>
    <string name="type_your_password">Type your Password</string>
    <string name="settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="fractions">Fractions</string>
    <string name="awards">Awards</string>
    <string name="exit">Exit</string>
    <string name="experience">Experience</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="bt_1">bt_1</string>
    <string name="bt_2">bt_2</string>
    <string name="bt_3">bt_3</string>
    <string name="userprivate">Private</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="default_text">Congratulations! You’re awesome Take your promo for xxx shop</string>
    <string name="promo_10">Promo 10</string>
    <string name="default_title">Recycler of the year</string>
    <string name="username2">Username 2</string>
    <string name="e_mail2">E-mail 2</string>
    <string name="calendar">Calendar</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="current_date">Current Date</string>
    <string name="amount">Amount</string>
    <string name="button_add" />
    <string name="create_your_note">Create your note</string>
    <string name="support2">Support</string>
    <string name="private_settings">Private Settings</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="show_email">Show E-mail</string>
    <string name="show_awards">Show awards</string>
    <string name="show_experience">Show experience</string>
    <string name="open_chat">Open chat</string>
    <string name="save">Save</string>
    <string name="if_you_have_some_questions_you_can_call_us_or_send_an_e_mail">If you have some questions, you can call us or send us an E-Mail!</string>
    <string name="the_e_mail_support_ecotracker_com">The E-Mail*: support@ecotracker.com</string>
    <string name="the_hotline_7_xxx_xxx_xx_xx">The hotline: +7(xxx)xxx-xx-xx</string>
    <string name="instruction_in_the_title_of_your_e_mail_use_the_word_error_in_the_body_describe_the_problem_and_add_screenshots_please">*Instruction: In the title of your E-mail use the word Error. In the body describe the problem and add screenshots, please.</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="change_password">Change Password</string>
    <string name="friend_requests">Friend requests</string>
    <string name="event_reminder">Event reminder</string>
    <string name="news">News</string>
    <string name="new_awards">New Awards</string>
    <string name="main">Main</string>
    <string name="change_username">Change Username</string>
    <string name="news_desc">Here you can find the latest news.</string>
    <string name="go">GO</string>
    <string name="articles_and_tests">Articles and Tests</string>
    <string name="articles_tests_desc">Here you can learn about recycling and pass the tests.</string>
    <string name="map">Map</string>
    <string name="map_desc">Here you can find the recycling collection points.</string>
    <string name="friends_achievements">Friends\' Achievements</string>
    <string name="friends_arch_desc">Here you can check your friends\' progress.</string>
    <string name="sign_in_for_eco_tracker">Sign in for ECO Tracker</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="other_users">Other Users</string>
</resources>