<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    android:gravity="center"
    android:background="@drawable/background">

    <TextView
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/welcome"
        android:textSize="30sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome_to_eco_tracker"
        android:textColor="@color/text_grey"/>

    <TextView
        style="@style/CustomText"
        android:textSize="20sp"
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/text_grey"
        android:layout_below="@id/welcome"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
        android:text="@string/type_your_e_mail"
        android:layout_alignEnd="@id/login"
        android:layout_alignStart="@id/login"
        android:textColor="@color/text_grey"
        android:layout_below="@id/email"/>

    <TextView
        style="@style/CustomText"
        android:id="@+id/password"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/text_grey"
        android:layout_below="@id/editTextTextEmailAddress"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/type_your_password"
        android:layout_alignEnd="@id/login"
        android:layout_alignStart="@id/login"
        android:textColor="@color/text_grey"
        android:layout_below="@id/password"/>

    <Button
        android:textStyle="bold"
        style="@style/CustomText"
        android:textSize="20sp"
        android:textColor="@color/dark_turquoise"
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/turquoise"
        android:onClick="logIn"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:layout_below="@id/editTextTextPassword"/>

    <TextView
        style="@style/CustomText"
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textColor="@color/dark_turquoise"
        android:layout_below="@id/login"
        android:layout_alignEnd="@id/login"
        android:layout_alignStart="@id/login"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/signIn"
        android:onClick="signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_now"
        android:textColor="@color/dark_turquoise"
        android:layout_below="@id/changePassword"/>

    <TextView
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="@color/dark_turquoise"
        android:layout_below="@id/signIn"/>

</RelativeLayout>