<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/relativeLayout"
    android:gravity="center"
    android:background="@drawable/basic_background">

    <TextView
        style="@style/CustomHeadline"
        android:id="@+id/textView"
        android:text="@string/private_settings"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView"
        android:layout_above="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/linearLayout"
            android:layout_marginTop="50dp">

            <androidx.appcompat.widget.SwitchCompat
                android:layout_marginTop="40dp"
                android:id="@+id/switch_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/show_email"
                style="@style/CustomText" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_marginTop="20dp"
                android:id="@+id/switch_awards"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/show_awards"
                style="@style/CustomText"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_marginTop="20dp"
                android:id="@+id/switch_experience"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/show_experience"
                style="@style/CustomText"/>

            <Button
                android:id="@+id/changePassword"
                style="@style/CustomText"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/change_password"
                android:textAlignment="textStart"
                />

            <Button
                style="@style/CustomText"
                android:id="@+id/changeEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/change_e_mail"
                android:textAlignment="textStart"
                />

            <Button
                android:id="@+id/changeUsername"
                style="@style/CustomText"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/change_username"
                android:textAlignment="textStart"
                />

            <Button
                style="@style/CustomText"
                android:id="@+id/delete"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/delete_account"
                android:textColor="@color/text_pink"
                android:textAlignment="textStart"
                />

            <Button
                style="@style/CustomText"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:backgroundTint="@color/turquoise"
                android:textStyle="bold"
                android:textColor="@color/dark_turquoise"
                android:id="@+id/button_save"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent_light_grey"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageButton
                android:layout_marginEnd="70dp"
                style="@style/ButtonToolbar"
                android:id="@+id/main_btn"
                android:src="@drawable/home"/>

            <ImageButton
                android:layout_marginEnd="70dp"
                style="@style/ButtonToolbar"
                android:id="@+id/calendar"
                android:backgroundTint="@color/transparent_turquoise"
                android:src="@drawable/calendar_month_outline"/>

            <ImageButton
                style="@style/ButtonToolbar"
                android:id="@+id/profile_btn"
                android:src="@drawable/account"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</RelativeLayout>
