<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/relativeLayout"
    android:background="@drawable/basic_background">

    <TextView
        android:layout_marginTop="50dp"
        style="@style/CustomHeadline"
        android:id="@+id/textView"
        android:text="@string/create_your_note"/>

    <LinearLayout
        android:layout_below="@id/textView"
        android:layout_above="@id/toolbar"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:inputType="date"
            android:text="@string/current_date"
            android:textAlignment="center"/>

        <EditText
            android:layout_marginTop="50dp"
            android:id="@+id/editTextNumber"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:inputType="number"
            android:text="@string/amount"
            android:textAlignment="center"/>

        <Spinner
            android:layout_marginTop="50dp"
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <Spinner
            android:layout_marginTop="50dp"
            android:id="@+id/spinner2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <Button
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:backgroundTint="@color/turquoise"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/button_add"
            android:text="@string/add_note"/>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent_light_grey"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageButton
                android:layout_marginEnd="70dp"
                style="@style/ButtonToolbar"
                android:id="@+id/main_btn"
                android:src="@drawable/home"/>

            <ImageButton
                android:layout_marginEnd="70dp"
                style="@style/ButtonToolbar"
                android:id="@+id/calendar"
                android:backgroundTint="@color/transparent_turquoise"
                android:src="@drawable/calendar_month_outline"/>

            <ImageButton
                style="@style/ButtonToolbar"
                android:id="@+id/profile_btn"
                android:src="@drawable/account"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

</RelativeLayout>